thy/Iptables_Semantics/Examples/medium-sized-company/iptables-save
# Generated by iptables-save v1.4.21 on Sun Jan 31 14:02:31 2016
*security
:INPUT ACCEPT [37:13531]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37:13531]
COMMIT
# Completed on Sun Jan 31 14:02:31 2016
# Generated by iptables-save v1.4.21 on Sun Jan 31 14:02:31 2016
*raw
:PREROUTING ACCEPT [37:13531]
:OUTPUT ACCEPT [37:13531]
-A PREROUTING -m rpfilter --invert -j DROP
COMMIT
# Completed on Sun Jan 31 14:02:31 2016
# Generated by iptables-save v1.4.21 on Sun Jan 31 14:02:31 2016
*mangle
:PREROUTING ACCEPT [37:13531]
:INPUT ACCEPT [37:13531]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [37:13531]
:POSTROUTING ACCEPT [37:13531]
COMMIT
# Completed on Sun Jan 31 14:02:31 2016
# Generated by iptables-save v1.4.21 on Sun Jan 31 14:02:31 2016
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
-A PREROUTING -i ppp0 -p tcp -m tcp --dport 4081 -j DNAT --to-destination 172.16.2.34
-A POSTROUTING -s 172.16.2.0/24 -o ppp0 -j MASQUERADE
COMMIT
# Completed on Sun Jan 31 14:02:31 2016
# Generated by iptables-save v1.4.21 on Sun Jan 31 14:02:31 2016
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [35:12782]
:FW - [0:0]
:FW-OPEN - [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -i lo -j ACCEPT
-A INPUT -i eth0 -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j LOG --log-prefix "[invalid] "
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j LOG --log-prefix "[portscan] "
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j LOG --log-prefix "[portscan] "
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j LOG --log-prefix "[final reject] "
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A FORWARD -s 172.16.2.1/32
-A FORWARD -d 172.16.2.1/32
-A FORWARD -s 172.16.2.2/32
-A FORWARD -d 172.16.2.2/32
-A FORWARD -s 172.16.2.3/32
-A FORWARD -d 172.16.2.3/32
-A FORWARD -s 172.16.2.4/32
-A FORWARD -d 172.16.2.4/32
-A FORWARD -s 172.16.2.5/32
-A FORWARD -d 172.16.2.5/32
-A FORWARD -s 172.16.2.6/32
-A FORWARD -d 172.16.2.6/32
-A FORWARD -s 172.16.2.7/32
-A FORWARD -d 172.16.2.7/32
-A FORWARD -s 172.16.2.8/32
-A FORWARD -d 172.16.2.8/32
-A FORWARD -s 172.16.2.9/32
-A FORWARD -d 172.16.2.9/32
-A FORWARD -s 172.16.2.10/32
-A FORWARD -d 172.16.2.10/32
-A FORWARD -s 172.16.2.11/32
-A FORWARD -d 172.16.2.11/32
-A FORWARD -s 172.16.2.12/32
-A FORWARD -d 172.16.2.12/32
-A FORWARD -s 172.16.2.13/32
-A FORWARD -d 172.16.2.13/32
-A FORWARD -s 172.16.2.14/32
-A FORWARD -d 172.16.2.14/32
-A FORWARD -s 172.16.2.15/32
-A FORWARD -d 172.16.2.15/32
-A FORWARD -s 172.16.2.16/32
-A FORWARD -d 172.16.2.16/32
-A FORWARD -s 172.16.2.17/32
-A FORWARD -d 172.16.2.17/32
-A FORWARD -s 172.16.2.18/32
-A FORWARD -d 172.16.2.18/32
-A FORWARD -s 172.16.2.19/32
-A FORWARD -d 172.16.2.19/32
-A FORWARD -s 172.16.2.20/32
-A FORWARD -d 172.16.2.20/32
-A FORWARD -s 172.16.2.21/32
-A FORWARD -d 172.16.2.21/32
-A FORWARD -s 172.16.2.22/32
-A FORWARD -d 172.16.2.22/32
-A FORWARD -s 172.16.2.23/32
-A FORWARD -d 172.16.2.23/32
-A FORWARD -s 172.16.2.24/32
-A FORWARD -d 172.16.2.24/32
-A FORWARD -s 172.16.2.25/32
-A FORWARD -d 172.16.2.25/32
-A FORWARD -s 172.16.2.26/32
-A FORWARD -d 172.16.2.26/32
-A FORWARD -s 172.16.2.27/32
-A FORWARD -d 172.16.2.27/32
-A FORWARD -s 172.16.2.28/32
-A FORWARD -d 172.16.2.28/32
-A FORWARD -s 172.16.2.29/32
-A FORWARD -d 172.16.2.29/32
-A FORWARD -s 172.16.2.30/32
-A FORWARD -d 172.16.2.30/32
-A FORWARD -s 172.16.2.31/32
-A FORWARD -d 172.16.2.31/32
-A FORWARD -s 172.16.2.32/32
-A FORWARD -d 172.16.2.32/32
-A FORWARD -s 172.16.2.33/32
-A FORWARD -d 172.16.2.33/32
-A FORWARD -s 172.16.2.34/32
-A FORWARD -d 172.16.2.34/32
-A FORWARD -s 172.16.2.35/32
-A FORWARD -d 172.16.2.35/32
-A FORWARD -s 172.16.2.36/32
-A FORWARD -d 172.16.2.36/32
-A FORWARD -s 172.16.2.37/32
-A FORWARD -d 172.16.2.37/32
-A FORWARD -s 172.16.2.38/32
-A FORWARD -d 172.16.2.38/32
-A FORWARD -s 172.16.2.39/32
-A FORWARD -d 172.16.2.39/32
-A FORWARD -s 172.16.2.40/32
-A FORWARD -d 172.16.2.40/32
-A FORWARD -s 172.16.2.41/32
-A FORWARD -d 172.16.2.41/32
-A FORWARD -s 172.16.2.42/32
-A FORWARD -d 172.16.2.42/32
-A FORWARD -s 172.16.2.43/32
-A FORWARD -d 172.16.2.43/32
-A FORWARD -s 172.16.2.44/32
-A FORWARD -d 172.16.2.44/32
-A FORWARD -s 172.16.2.45/32
-A FORWARD -d 172.16.2.45/32
-A FORWARD -s 172.16.2.46/32
-A FORWARD -d 172.16.2.46/32
-A FORWARD -s 172.16.2.47/32
-A FORWARD -d 172.16.2.47/32
-A FORWARD -s 172.16.2.48/32
-A FORWARD -d 172.16.2.48/32
-A FORWARD -s 172.16.2.49/32
-A FORWARD -d 172.16.2.49/32
-A FORWARD -s 172.16.2.50/32
-A FORWARD -d 172.16.2.50/32
-A FORWARD -s 172.16.2.51/32
-A FORWARD -d 172.16.2.51/32
-A FORWARD -s 172.16.2.52/32
-A FORWARD -d 172.16.2.52/32
-A FORWARD -s 172.16.2.53/32
-A FORWARD -d 172.16.2.53/32
-A FORWARD -s 172.16.2.54/32
-A FORWARD -d 172.16.2.54/32
-A FORWARD -s 172.16.2.55/32
-A FORWARD -d 172.16.2.55/32
-A FORWARD -s 172.16.2.56/32
-A FORWARD -d 172.16.2.56/32
-A FORWARD -s 172.16.2.57/32
-A FORWARD -d 172.16.2.57/32
-A FORWARD -s 172.16.2.58/32
-A FORWARD -d 172.16.2.58/32
-A FORWARD -s 172.16.2.59/32
-A FORWARD -d 172.16.2.59/32
-A FORWARD -s 172.16.2.60/32
-A FORWARD -d 172.16.2.60/32
-A FORWARD -s 172.16.2.61/32
-A FORWARD -d 172.16.2.61/32
-A FORWARD -s 172.16.2.62/32
-A FORWARD -d 172.16.2.62/32
-A FORWARD -s 172.16.2.63/32
-A FORWARD -d 172.16.2.63/32
-A FORWARD -s 172.16.2.64/32
-A FORWARD -d 172.16.2.64/32
-A FORWARD -s 172.16.2.65/32
-A FORWARD -d 172.16.2.65/32
-A FORWARD -s 172.16.2.66/32
-A FORWARD -d 172.16.2.66/32
-A FORWARD -s 172.16.2.67/32
-A FORWARD -d 172.16.2.67/32
-A FORWARD -s 172.16.2.68/32
-A FORWARD -d 172.16.2.68/32
-A FORWARD -s 172.16.2.69/32
-A FORWARD -d 172.16.2.69/32
-A FORWARD -s 172.16.2.70/32
-A FORWARD -d 172.16.2.70/32
-A FORWARD -s 172.16.2.71/32
-A FORWARD -d 172.16.2.71/32
-A FORWARD -s 172.16.2.72/32
-A FORWARD -d 172.16.2.72/32
-A FORWARD -s 172.16.2.73/32
-A FORWARD -d 172.16.2.73/32
-A FORWARD -s 172.16.2.74/32
-A FORWARD -d 172.16.2.74/32
-A FORWARD -s 172.16.2.75/32
-A FORWARD -d 172.16.2.75/32
-A FORWARD -s 172.16.2.76/32
-A FORWARD -d 172.16.2.76/32
-A FORWARD -s 172.16.2.77/32
-A FORWARD -d 172.16.2.77/32
-A FORWARD -s 172.16.2.78/32
-A FORWARD -d 172.16.2.78/32
-A FORWARD -s 172.16.2.79/32
-A FORWARD -d 172.16.2.79/32
-A FORWARD -s 172.16.2.80/32
-A FORWARD -d 172.16.2.80/32
-A FORWARD -s 172.16.2.81/32
-A FORWARD -d 172.16.2.81/32
-A FORWARD -s 172.16.2.82/32
-A FORWARD -d 172.16.2.82/32
-A FORWARD -s 172.16.2.83/32
-A FORWARD -d 172.16.2.83/32
-A FORWARD -s 172.16.2.84/32
-A FORWARD -d 172.16.2.84/32
-A FORWARD -s 172.16.2.85/32
-A FORWARD -d 172.16.2.85/32
-A FORWARD -s 172.16.2.86/32
-A FORWARD -d 172.16.2.86/32
-A FORWARD -s 172.16.2.87/32
-A FORWARD -d 172.16.2.87/32
-A FORWARD -s 172.16.2.88/32
-A FORWARD -d 172.16.2.88/32
-A FORWARD -s 172.16.2.89/32
-A FORWARD -d 172.16.2.89/32
-A FORWARD -s 172.16.2.90/32
-A FORWARD -d 172.16.2.90/32
-A FORWARD -s 172.16.2.91/32
-A FORWARD -d 172.16.2.91/32
-A FORWARD -s 172.16.2.92/32
-A FORWARD -d 172.16.2.92/32
-A FORWARD -s 172.16.2.93/32
-A FORWARD -d 172.16.2.93/32
-A FORWARD -s 172.16.2.94/32
-A FORWARD -d 172.16.2.94/32
-A FORWARD -s 172.16.2.95/32
-A FORWARD -d 172.16.2.95/32
-A FORWARD -s 172.16.2.96/32
-A FORWARD -d 172.16.2.96/32
-A FORWARD -s 172.16.2.97/32
-A FORWARD -d 172.16.2.97/32
-A FORWARD -s 172.16.2.98/32
-A FORWARD -d 172.16.2.98/32
-A FORWARD -s 172.16.2.99/32
-A FORWARD -d 172.16.2.99/32
-A FORWARD -s 172.16.2.100/32
-A FORWARD -d 172.16.2.100/32
-A FORWARD -s 172.16.2.101/32
-A FORWARD -d 172.16.2.101/32
-A FORWARD -s 172.16.2.102/32
-A FORWARD -d 172.16.2.102/32
-A FORWARD -s 172.16.2.103/32
-A FORWARD -d 172.16.2.103/32
-A FORWARD -s 172.16.2.104/32
-A FORWARD -d 172.16.2.104/32
-A FORWARD -s 172.16.2.105/32
-A FORWARD -d 172.16.2.105/32
-A FORWARD -s 172.16.2.106/32
-A FORWARD -d 172.16.2.106/32
-A FORWARD -s 172.16.2.107/32
-A FORWARD -d 172.16.2.107/32
-A FORWARD -s 172.16.2.108/32
-A FORWARD -d 172.16.2.108/32
-A FORWARD -s 172.16.2.109/32
-A FORWARD -d 172.16.2.109/32
-A FORWARD -s 172.16.2.110/32
-A FORWARD -d 172.16.2.110/32
-A FORWARD -s 172.16.2.111/32
-A FORWARD -d 172.16.2.111/32
-A FORWARD -s 172.16.2.112/32
-A FORWARD -d 172.16.2.112/32
-A FORWARD -s 172.16.2.113/32
-A FORWARD -d 172.16.2.113/32
-A FORWARD -s 172.16.2.114/32
-A FORWARD -d 172.16.2.114/32
-A FORWARD -s 172.16.2.115/32
-A FORWARD -d 172.16.2.115/32
-A FORWARD -s 172.16.2.116/32
-A FORWARD -d 172.16.2.116/32
-A FORWARD -s 172.16.2.117/32
-A FORWARD -d 172.16.2.117/32
-A FORWARD -s 172.16.2.118/32
-A FORWARD -d 172.16.2.118/32
-A FORWARD -s 172.16.2.119/32
-A FORWARD -d 172.16.2.119/32
-A FORWARD -s 172.16.2.120/32
-A FORWARD -d 172.16.2.120/32
-A FORWARD -s 172.16.2.121/32
-A FORWARD -d 172.16.2.121/32
-A FORWARD -s 172.16.2.122/32
-A FORWARD -d 172.16.2.122/32
-A FORWARD -s 172.16.2.123/32
-A FORWARD -d 172.16.2.123/32
-A FORWARD -s 172.16.2.124/32
-A FORWARD -d 172.16.2.124/32
-A FORWARD -s 172.16.2.125/32
-A FORWARD -d 172.16.2.125/32
-A FORWARD -s 172.16.2.126/32
-A FORWARD -d 172.16.2.126/32
-A FORWARD -s 172.16.2.127/32
-A FORWARD -d 172.16.2.127/32
-A FORWARD -s 172.16.2.128/32
-A FORWARD -d 172.16.2.128/32
-A FORWARD -s 172.16.2.129/32
-A FORWARD -d 172.16.2.129/32
-A FORWARD -s 172.16.2.130/32
-A FORWARD -d 172.16.2.130/32
-A FORWARD -s 172.16.2.131/32
-A FORWARD -d 172.16.2.131/32
-A FORWARD -s 172.16.2.132/32
-A FORWARD -d 172.16.2.132/32
-A FORWARD -s 172.16.2.133/32
-A FORWARD -d 172.16.2.133/32
-A FORWARD -s 172.16.2.134/32
-A FORWARD -d 172.16.2.134/32
-A FORWARD -s 172.16.2.135/32
-A FORWARD -d 172.16.2.135/32
-A FORWARD -s 172.16.2.136/32
-A FORWARD -d 172.16.2.136/32
-A FORWARD -s 172.16.2.137/32
-A FORWARD -d 172.16.2.137/32
-A FORWARD -s 172.16.2.138/32
-A FORWARD -d 172.16.2.138/32
-A FORWARD -s 172.16.2.139/32
-A FORWARD -d 172.16.2.139/32
-A FORWARD -s 172.16.2.140/32
-A FORWARD -d 172.16.2.140/32
-A FORWARD -s 172.16.2.141/32
-A FORWARD -d 172.16.2.141/32
-A FORWARD -s 172.16.2.142/32
-A FORWARD -d 172.16.2.142/32
-A FORWARD -s 172.16.2.143/32
-A FORWARD -d 172.16.2.143/32
-A FORWARD -s 172.16.2.144/32
-A FORWARD -d 172.16.2.144/32
-A FORWARD -s 172.16.2.145/32
-A FORWARD -d 172.16.2.145/32
-A FORWARD -s 172.16.2.146/32
-A FORWARD -d 172.16.2.146/32
-A FORWARD -s 172.16.2.147/32
-A FORWARD -d 172.16.2.147/32
-A FORWARD -s 172.16.2.148/32
-A FORWARD -d 172.16.2.148/32
-A FORWARD -s 172.16.2.149/32
-A FORWARD -d 172.16.2.149/32
-A FORWARD -s 172.16.2.150/32
-A FORWARD -d 172.16.2.150/32
-A FORWARD -s 172.16.2.151/32
-A FORWARD -d 172.16.2.151/32
-A FORWARD -s 172.16.2.152/32
-A FORWARD -d 172.16.2.152/32
-A FORWARD -s 172.16.2.153/32
-A FORWARD -d 172.16.2.153/32
-A FORWARD -s 172.16.2.154/32
-A FORWARD -d 172.16.2.154/32
-A FORWARD -s 172.16.2.155/32
-A FORWARD -d 172.16.2.155/32
-A FORWARD -s 172.16.2.156/32
-A FORWARD -d 172.16.2.156/32
-A FORWARD -s 172.16.2.157/32
-A FORWARD -d 172.16.2.157/32
-A FORWARD -s 172.16.2.158/32
-A FORWARD -d 172.16.2.158/32
-A FORWARD -s 172.16.2.159/32
-A FORWARD -d 172.16.2.159/32
-A FORWARD -s 172.16.2.160/32
-A FORWARD -d 172.16.2.160/32
-A FORWARD -s 172.16.2.161/32
-A FORWARD -d 172.16.2.161/32
-A FORWARD -s 172.16.2.162/32
-A FORWARD -d 172.16.2.162/32
-A FORWARD -s 172.16.2.163/32
-A FORWARD -d 172.16.2.163/32
-A FORWARD -s 172.16.2.164/32
-A FORWARD -d 172.16.2.164/32
-A FORWARD -s 172.16.2.165/32
-A FORWARD -d 172.16.2.165/32
-A FORWARD -s 172.16.2.166/32
-A FORWARD -d 172.16.2.166/32
-A FORWARD -s 172.16.2.167/32
-A FORWARD -d 172.16.2.167/32
-A FORWARD -s 172.16.2.168/32
-A FORWARD -d 172.16.2.168/32
-A FORWARD -s 172.16.2.169/32
-A FORWARD -d 172.16.2.169/32
-A FORWARD -s 172.16.2.170/32
-A FORWARD -d 172.16.2.170/32
-A FORWARD -s 172.16.2.171/32
-A FORWARD -d 172.16.2.171/32
-A FORWARD -s 172.16.2.172/32
-A FORWARD -d 172.16.2.172/32
-A FORWARD -s 172.16.2.173/32
-A FORWARD -d 172.16.2.173/32
-A FORWARD -s 172.16.2.174/32
-A FORWARD -d 172.16.2.174/32
-A FORWARD -s 172.16.2.175/32
-A FORWARD -d 172.16.2.175/32
-A FORWARD -s 172.16.2.176/32
-A FORWARD -d 172.16.2.176/32
-A FORWARD -s 172.16.2.177/32
-A FORWARD -d 172.16.2.177/32
-A FORWARD -s 172.16.2.178/32
-A FORWARD -d 172.16.2.178/32
-A FORWARD -s 172.16.2.179/32
-A FORWARD -d 172.16.2.179/32
-A FORWARD -s 172.16.2.180/32
-A FORWARD -d 172.16.2.180/32
-A FORWARD -s 172.16.2.181/32
-A FORWARD -d 172.16.2.181/32
-A FORWARD -s 172.16.2.182/32
-A FORWARD -d 172.16.2.182/32
-A FORWARD -s 172.16.2.183/32
-A FORWARD -d 172.16.2.183/32
-A FORWARD -s 172.16.2.184/32
-A FORWARD -d 172.16.2.184/32
-A FORWARD -s 172.16.2.185/32
-A FORWARD -d 172.16.2.185/32
-A FORWARD -s 172.16.2.186/32
-A FORWARD -d 172.16.2.186/32
-A FORWARD -s 172.16.2.187/32
-A FORWARD -d 172.16.2.187/32
-A FORWARD -s 172.16.2.188/32
-A FORWARD -d 172.16.2.188/32
-A FORWARD -s 172.16.2.189/32
-A FORWARD -d 172.16.2.189/32
-A FORWARD -s 172.16.2.190/32
-A FORWARD -d 172.16.2.190/32
-A FORWARD -s 172.16.2.191/32
-A FORWARD -d 172.16.2.191/32
-A FORWARD -s 172.16.2.192/32
-A FORWARD -d 172.16.2.192/32
-A FORWARD -s 172.16.2.193/32
-A FORWARD -d 172.16.2.193/32
-A FORWARD -s 172.16.2.194/32
-A FORWARD -d 172.16.2.194/32
-A FORWARD -s 172.16.2.195/32
-A FORWARD -d 172.16.2.195/32
-A FORWARD -s 172.16.2.196/32
-A FORWARD -d 172.16.2.196/32
-A FORWARD -s 172.16.2.197/32
-A FORWARD -d 172.16.2.197/32
-A FORWARD -s 172.16.2.198/32
-A FORWARD -d 172.16.2.198/32
-A FORWARD -s 172.16.2.199/32
-A FORWARD -d 172.16.2.199/32
-A FORWARD -s 172.16.2.200/32
-A FORWARD -d 172.16.2.200/32
-A FORWARD -s 172.16.2.201/32
-A FORWARD -d 172.16.2.201/32
-A FORWARD -s 172.16.2.202/32
-A FORWARD -d 172.16.2.202/32
-A FORWARD -s 172.16.2.203/32
-A FORWARD -d 172.16.2.203/32
-A FORWARD -s 172.16.2.204/32
-A FORWARD -d 172.16.2.204/32
-A FORWARD -s 172.16.2.205/32
-A FORWARD -d 172.16.2.205/32
-A FORWARD -s 172.16.2.206/32
-A FORWARD -d 172.16.2.206/32
-A FORWARD -s 172.16.2.207/32
-A FORWARD -d 172.16.2.207/32
-A FORWARD -s 172.16.2.208/32
-A FORWARD -d 172.16.2.208/32
-A FORWARD -s 172.16.2.209/32
-A FORWARD -d 172.16.2.209/32
-A FORWARD -s 172.16.2.210/32
-A FORWARD -d 172.16.2.210/32
-A FORWARD -s 172.16.2.211/32
-A FORWARD -d 172.16.2.211/32
-A FORWARD -s 172.16.2.212/32
-A FORWARD -d 172.16.2.212/32
-A FORWARD -s 172.16.2.213/32
-A FORWARD -d 172.16.2.213/32
-A FORWARD -s 172.16.2.214/32
-A FORWARD -d 172.16.2.214/32
-A FORWARD -s 172.16.2.215/32
-A FORWARD -d 172.16.2.215/32
-A FORWARD -s 172.16.2.216/32
-A FORWARD -d 172.16.2.216/32
-A FORWARD -s 172.16.2.217/32
-A FORWARD -d 172.16.2.217/32
-A FORWARD -s 172.16.2.218/32
-A FORWARD -d 172.16.2.218/32
-A FORWARD -s 172.16.2.219/32
-A FORWARD -d 172.16.2.219/32
-A FORWARD -s 172.16.2.220/32
-A FORWARD -d 172.16.2.220/32
-A FORWARD -s 172.16.2.221/32
-A FORWARD -d 172.16.2.221/32
-A FORWARD -s 172.16.2.222/32
-A FORWARD -d 172.16.2.222/32
-A FORWARD -s 172.16.2.223/32
-A FORWARD -d 172.16.2.223/32
-A FORWARD -s 172.16.2.224/32
-A FORWARD -d 172.16.2.224/32
-A FORWARD -s 172.16.2.225/32
-A FORWARD -d 172.16.2.225/32
-A FORWARD -s 172.16.2.226/32
-A FORWARD -d 172.16.2.226/32
-A FORWARD -s 172.16.2.227/32
-A FORWARD -d 172.16.2.227/32
-A FORWARD -s 172.16.2.228/32
-A FORWARD -d 172.16.2.228/32
-A FORWARD -s 172.16.2.229/32
-A FORWARD -d 172.16.2.229/32
-A FORWARD -s 172.16.2.230/32
-A FORWARD -d 172.16.2.230/32
-A FORWARD -s 172.16.2.231/32
-A FORWARD -d 172.16.2.231/32
-A FORWARD -s 172.16.2.232/32
-A FORWARD -d 172.16.2.232/32
-A FORWARD -s 172.16.2.233/32
-A FORWARD -d 172.16.2.233/32
-A FORWARD -s 172.16.2.234/32
-A FORWARD -d 172.16.2.234/32
-A FORWARD -s 172.16.2.235/32
-A FORWARD -d 172.16.2.235/32
-A FORWARD -s 172.16.2.236/32
-A FORWARD -d 172.16.2.236/32
-A FORWARD -s 172.16.2.237/32
-A FORWARD -d 172.16.2.237/32
-A FORWARD -s 172.16.2.238/32
-A FORWARD -d 172.16.2.238/32
-A FORWARD -s 172.16.2.239/32
-A FORWARD -d 172.16.2.239/32
-A FORWARD -s 172.16.2.240/32
-A FORWARD -d 172.16.2.240/32
-A FORWARD -s 172.16.2.241/32
-A FORWARD -d 172.16.2.241/32
-A FORWARD -s 172.16.2.242/32
-A FORWARD -d 172.16.2.242/32
-A FORWARD -s 172.16.2.243/32
-A FORWARD -d 172.16.2.243/32
-A FORWARD -s 172.16.2.244/32
-A FORWARD -d 172.16.2.244/32
-A FORWARD -s 172.16.2.245/32
-A FORWARD -d 172.16.2.245/32
-A FORWARD -s 172.16.2.246/32
-A FORWARD -d 172.16.2.246/32
-A FORWARD -s 172.16.2.247/32
-A FORWARD -d 172.16.2.247/32
-A FORWARD -s 172.16.2.248/32
-A FORWARD -d 172.16.2.248/32
-A FORWARD -s 172.16.2.249/32
-A FORWARD -d 172.16.2.249/32
-A FORWARD -s 172.16.2.250/32
-A FORWARD -d 172.16.2.250/32
-A FORWARD -s 172.16.2.251/32
-A FORWARD -d 172.16.2.251/32
-A FORWARD -s 172.16.2.252/32
-A FORWARD -d 172.16.2.252/32
-A FORWARD -s 172.16.2.253/32
-A FORWARD -d 172.16.2.253/32
-A FORWARD -s 172.16.2.254/32
-A FORWARD -d 172.16.2.254/32
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j FW
-A FORWARD -j FW-OPEN
-A FORWARD -j REJECT --reject-with icmp-host-unreachable
-A FW -d 194.97.153.231/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 194.97.151.143/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 151.80.102.139/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 80.237.184.24/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 212.45.104.69/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 63.245.217.112/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 213.9.42.248/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 83.169.59.64/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 94.198.59.132/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 94.198.59.134/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 178.250.2.98/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 95.131.121.65/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 82.199.80.141/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 83.133.189.139/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 85.90.254.45/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 212.227.67.37/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 195.20.250.231/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 46.4.115.113/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 144.76.67.119/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 206.191.168.170/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 46.20.32.75/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 217.72.250.89/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 95.172.69.42/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 217.72.250.84/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 178.250.0.101/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 213.203.221.43/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 178.250.2.77/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 83.169.54.252/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 213.203.221.32/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 217.72.250.66/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 178.63.153.114/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 95.131.121.199/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 93.184.221.133/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 46.20.32.74/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 176.9.103.51/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 85.195.127.21/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 80.252.91.41/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 178.250.2.73/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 85.25.248.94/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 178.250.2.102/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 80.190.166.25/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 88.198.208.110/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 188.65.74.70/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 62.141.33.131/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 82.196.187.209/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 194.126.239.34/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 74.119.117.71/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 91.215.101.185/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 216.38.172.131/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 184.168.47.225/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 54.68.106.202/32 -j REJECT --reject-with icmp-port-unreachable
-A FW -d 93.184.220.20/32 -j REJECT --reject-with icmp-port-unreachable
-A FW-OPEN -d 172.16.2.34/32 -p tcp -m tcp --dport 4081 -j ACCEPT
-A FW-OPEN -i eth0 -p tcp -m tcp --dport 80 -j ACCEPT
-A FW-OPEN -i eth0 -p tcp -m tcp --dport 443 -j ACCEPT
-A FW-OPEN -i eth0 -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A FW-OPEN -s 172.16.2.0/28 -i eth0 -j ACCEPT
-A FW-OPEN -s 172.16.2.248/29 -i eth0 -j ACCEPT
-A FW-OPEN -s 172.16.2.34/32 -i eth0 -j ACCEPT
-A FW-OPEN -s 172.16.2.247/32 -i eth0 -j ACCEPT
-A FW-OPEN -s 172.16.2.230/32 -i eth0 -j ACCEPT
-A FW-OPEN -s 192.168.255.0/24 -d 172.16.2.0/24 -j ACCEPT
-A FW-OPEN -s 172.16.2.0/24 -d 192.168.255.0/24 -j ACCEPT
-A TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A TCP -p tcp -m tcp --dport 53 -j ACCEPT
-A TCP -p tcp -m tcp --dport 7122 -j ACCEPT
-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A UDP -p udp -m udp --dport 53 -j ACCEPT
-A UDP -p udp -m udp --dport 1194 -j ACCEPT
COMMIT
# Completed on Sun Jan 31 14:02:31 2016
